--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@
 }
 
 
-html{font-size: 75%;
+html{font-size: 62.5%;
 box-sizing: border-box;}
 *, *:before, *:after {
 	box-sizing: inherit;
 	scroll-snap-type: y mandatory;
+  }
+  @media (min-width: ) {html{font-size: 80%;}
+	  
   }
 body{font-size: 16px;
 font-family:'Krub', sans-serif;
