--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ box-sizing: border-box;}
 	box-sizing: inherit;
 	scroll-snap-type: y mandatory;
   }
-  @media (min-width: ) {html{font-size: 90%;}
+  @media (min-width: 1000px) {html{font-size: 90%;}
 	  
   }
 body{font-size: 16px;
