--- a/style.css
+++ b/style.css
@@ -12,9 +12,8 @@ box-sizing: border-box;}
 	box-sizing: inherit;
 	scroll-snap-type: y mandatory;
   }
-  @media (min-width: 1000px) {html,.navigation{font-size: 100%;}
-	  
-  }
+  
+	
 body{font-size: 16px;
 font-family:'Krub', sans-serif;
 background-image: linear-gradient(to top,#dfe9f3 0%, var(--white) 100%);
@@ -88,7 +87,7 @@ display: block;
 }
 
  @media (min-width: 1000px) {.navigation{flex-direction: row;
-	justify-content: space-between;}}
+	justify-content: space-between; font-size: 100%;}}
 
 
 .hero{
