--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ box-sizing: border-box;}
 *, *:before, *:after {
 	box-sizing: inherit;
   }
-  
+  @media (min-width: 1000px) {html{font-size: 90%;}
+	  
+  }
 	
 body{font-size: 20px;
 font-family:'Krub', sans-serif;
