--- a/style.css
+++ b/style.css
@@ -93,7 +93,9 @@ display: block;
 
 .city {font-size: 2rem;
 }
-
+span{color: var(--white);
+background-color: rgba(82,81,82,0.30);
+border-radius: 15rem;}
 .hero{
 background-image: url(foto.jpg);
 background-repeat: no-repeat;
