--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ display: block;
 }
 span{color: var(--white);
 background-color: rgba(82,81,82,0.30);
-border-color: 15rem;}
+border: 5rem;}
 .hero{
 background-image: url(foto.jpg);
 background-repeat: no-repeat;
