--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ background-image: url(foto.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 height: 45rem;
-background-position: center centerss;	
+background-position: center;	
 position: relative;
 margin-bottom: 2rem;   
 }
