--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ h2{font-size: 2.8rem;}
 
 h3{font-size: 1.8rem;}
 
-h1,h2,h3{text-align: center;}
+p{font-size: 1.6rem;}
+
+h1,h2,h3,s p{text-align: center;}
 
 .shadow{-webkit-box-shadow: 0px 5px 15px 0px rgba(82,81,82,0.54);
 	-moz-box-shadow: 0px 5px 15px 0px rgba(82,81,82,0.54);
