--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ h3{font-size: 1.8rem;}
 
 p{font-size: 1.6rem;}
 
+@media (max-width: 992px ) { p{font-size: 2rem;}
+h2{font-size:3rem;} h3{font-size: 2.5rem;}
+	
+}
+
 h1,h2,h3,s p{text-align: center;}
 
 .shadow{-webkit-box-shadow: 0px 5px 15px 0px rgba(82,81,82,0.54);
