--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ margin: 0 auto 0 auto;
 }
 .button:hover{cursor: pointer;}
 
-@media (min-width: 992px){ .button{padding: 1rem auto 1rem auto;
+@media (max-width: 992px){ .button{ max-width: 40rem;
 	
 }}
 
