--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ margin: 0 auto 0 auto;
 	padding: 1rem 3rem;
 	margin-top: 1rem;
 	font-size: 2rem;
+	display: block;
+	max-width: 40rem;
 	text-decoration: none;
 	text-transform: uppercase;
 	font-weight: bold;
