--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ margin: 0 auto 0 auto;
 }
 .button:hover{cursor: pointer;}
 
-@media (max-width: 992px){ .button{ max-width: 40rem;
+@media (max-width: 992px){ .button{ max-width: 40rem; font-size: 3rem;
 	
 }}
 
