--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ box-sizing: border-box;}
 	  
   }
 	
-body{font-size: 18px;
+body{font-size: 1.8rem;
 font-family:'Krub', sans-serif;
 background-image: linear-gradient(to top,#dfe9f3 0%, var(--white) 100%);
 }
