--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ box-sizing: border-box;}
 	box-sizing: inherit;
   }
  
-	  
+  @media (max-width: 1000px) {html{font-size: 85%;}  
   
 	
 body{font-size: 1.8rem;
@@ -28,7 +28,10 @@ h3{font-size: 1.8rem;}
 
 p{font-size: 1.6rem;}
 
-
+@media (max-width: 992px ) { p{font-size: 2.2rem;}
+h2{font-size:3rem;} h3{font-size: 2.5rem;}
+	
+}
 
 h1,h2,h3,s p{text-align: center;}
 
@@ -65,7 +68,7 @@ margin: 0 auto 0 auto;
 }
 .button:hover{cursor: pointer;}
 
-@media (max-width: 992px){ .button{ max-width: 40rem;
+@media (max-width: 992px){ .button{ max-width: 40rem;font-size: 3rem;
 	
 }}
 
