--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ box-sizing: border-box;}
 	box-sizing: inherit;
   }
  
-  @media (max-width: 1000px) {html{font-size: 85%;}  
+  @media (max-width: 1000px) {html{font-size: 85%;}  }
   
 	
 body{font-size: 1.8rem;
@@ -199,9 +199,8 @@ column-gap: 1rem;
 
 .camp:nth-child(3){grid-column: 1/ 3;}
 .camp{
-margin-bottom: 1rem;
+margin-bottom: 1rem;}
 
-}
 .camp label{
 	color: var(--white);
 font-weight: bold;
