--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ box-sizing: border-box;}
   
   
 	
-body{font-size: 1.8rem;
+body{
 font-family:'Krub', sans-serif;
 background-image: linear-gradient(to top,#dfe9f3 0%, var(--white) 100%);
 }
@@ -81,7 +81,7 @@ display: flex;
 .navigation a{ color: var(--white);
 	padding: 1rem;
 text-decoration: none;
-font-size: 3rem;
+font-size: 2rem;
 font-weight: bold;
 text-align: center;
 display: block;
@@ -91,8 +91,8 @@ display: block;
 	color: var(--black)
 }
 
- @media (min-width: 1000px) {.navigation{flex-direction: row;
-	justify-content:space-evenly;} .navigation a{font-size: 2rem;}}
+ @media (min-width: 768px) {.navigation{flex-direction: row;
+	justify-content:space-evenly;} }
 
 
 .city {font-size: 2rem;
@@ -133,7 +133,7 @@ align-items: center;
 
 
 
-@media (min-width: 1000px) {.services{
+@media (min-width: 768px) {.services{
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	column-gap: 1rem;
