--- a/style.css
+++ b/style.css
@@ -107,7 +107,9 @@ position: relative;
 margin-bottom: 2rem;   
 }
 
-	
+	@media (min-width: 768px) {.hero{height: 80rem;}
+		
+	}
 
 
 .content{position: absolute;
