--- a/style.css
+++ b/style.css
@@ -107,12 +107,13 @@ position: relative;
 margin-bottom: 2rem;   
 }
 
-	@media (min-width: 768px) {.hero{height: 60rem;}
+	@media (min-width: 768px) {.hero{height: 50rem;}
 		
 	}
 
 
 .content{position: absolute;
+	margin-top: 5rem;
 	background-color: rgba(0,0,0,0, 0.7);
 width: 100%;
 height: 100%;
@@ -126,6 +127,8 @@ align-items: center;
 .content p{
 	color: var(--white);
 }
+
+
 
 .services{
 	display: grid;	
