--- a/style.css
+++ b/style.css
@@ -108,19 +108,18 @@ margin-bottom: 2rem;
 }
 
 	@media (min-width: 768px) {.hero{height: 60rem;}
-		
+		.content{margin-top: 10rem;}
 	}
 
 
 .content{position: absolute;
-	margin-top: 10rem;
+	margin-top: 2rem;
 	background-color: rgba(0,0,0,0, 0.7);
 width: 100%;
 height: 100%;
 display: flex;
 flex-direction: column;
 align-items: center;
-
 }
 
 .content h2,
