--- a/style.css
+++ b/style.css
@@ -40,7 +40,11 @@ padding: 2rem;
 border-radius: 1rem;
 }
 
-
+.hero a{
+	-webkit-box-shadow: -2px 7px 12px 6px rgb(255 255 255 / 86%);
+    -moz-box-shadow: -2px 7px 12px 6px rgba(255, 255, 255, 0.856);
+    box-shadow: -2px 7px 12px 6px rgb(255 255 255 / 86%);
+}
 
 
 .container{
@@ -83,6 +87,9 @@ margin: 0 auto 0 auto;
 	width: 90%;
 	text-align: center;	
 	border: none;
+	-webkit-box-shadow: -3px 29px 21px -7px rgba(0,0,0,0.75);
+	-moz-box-shadow: -3px 29px 21px -7px rgba(0,0,0,0.75);
+	box-shadow: -3px 29px 21px -7px rgba(0,0,0,0.75);
 }
 .button2:hover{cursor: pointer;}
 
