--- a/style.css
+++ b/style.css
@@ -280,7 +280,54 @@ display: block;
 display: flex;
 justify-content: flex-end;}
 
+/**CORREO**/
 
+
+.correo  {background-color: var(--secondary);
+    color: var(--white);
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform:normal;
+    font-weight: bold;
+    border-radius: .5rem;
+    text-align: center;
+    border: none;
+    display: block;
+    justify-content: center;
+	padding: 1rem;
+    -webkit-box-shadow: -2px 7px 12px 6px rgba(255, 255, 255, 0.678);
+    -moz-box-shadow: -2px 7px 12px 6px rgba(255, 255, 255, 0.678);
+    box-shadow: -2px 7px 12px 6px rgba(255, 255, 255, 0.678);
+    margin-bottom: 1.5rem;}
+
+    
+
+    .correo p {color: var(--white);}
+
+	.contacto{
+max-width: 100rem;
+	display: grid;
+	grid-template-columns: 33% 33% 33%;
+	gap: 2rem;
+	margin: 0 auto;
+	}
+
+	@media (max-width: 992px) {
+		.contacto{
+			display: flex;
+			flex-direction: column;
+
+				gap: 2rem;
+				margin: 0 auto;
+				}
+	}
+
+	.linkedin {
+		text-decoration: none;
+		color: #ffffff;
+
+	} 
  
 
 .footer{
